--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "devDependencies": {
-    "typescript": "^5.3.3"
-  },
   "name": "ts-sample",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "typescript": "^5.3.3"
+  }
 }
