--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "bundle": "rollup --config --bundleConfigAsCjs"
   },
   "author": "",
   "license": "ISC",
