--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "node-fetch": "^3.3.2",
     "rollup": "^4.9.6",
     "tslib": "^2.6.2"
   }
